@@ -4,14 +4,15 @@ package ch.alpine.tensor;
 import java.io.Serializable;
 import java.util.Iterator;
 import java.util.List;
-import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
+import ch.alpine.tensor.ext.Int;
 import ch.alpine.tensor.ext.Integers;
 import ch.alpine.tensor.ext.Lists;
 import ch.alpine.tensor.io.MathematicaFormat;
+import ch.alpine.tensor.jet.Hold;
 
 /** reference implementation of the interface Tensor */
 /* package */ class TensorImpl extends AbstractTensor implements Serializable {
@@ -41,7 +42,7 @@ import ch.alpine.tensor.io.MathematicaFormat;
   public Tensor get(List<Integer> index) {
     if (index.isEmpty())
       return copy();
-    int head = index.get(0);
+    int head = index.getFirst();
     List<Integer> _index = Lists.rest(index);
     return head == ALL //
         ? Tensor.of(stream().map(tensor -> tensor.get(_index)))
@@ -50,11 +51,11 @@ import ch.alpine.tensor.io.MathematicaFormat;
 
   @Override // from Tensor
   public void set(Tensor tensor, List<Integer> index) {
-    int head = index.get(0);
+    int head = index.getFirst();
     if (index.size() == 1) // terminal case
       if (head == ALL) {
         Integers.requireEquals(length(), tensor.length());
-        AtomicInteger i = new AtomicInteger();
+        Int i = new Int();
         tensor.stream().map(Tensor::copy).forEach(entry -> list.set(i.getAndIncrement(), entry)); // insert copies
       } else
         list.set(head, tensor.copy()); // insert copy
@@ -62,7 +63,7 @@ import ch.alpine.tensor.io.MathematicaFormat;
       List<Integer> _index = Lists.rest(index);
       if (head == ALL) {
         Integers.requireEquals(length(), tensor.length());
-        AtomicInteger i = new AtomicInteger();
+        Int i = new Int();
         tensor.forEach(entry -> list.get(i.getAndIncrement()).set(entry, _index));
       } else
         list.get(head).set(tensor, _index);
@@ -72,7 +73,7 @@ import ch.alpine.tensor.io.MathematicaFormat;
   @SuppressWarnings("unchecked")
   @Override // from Tensor
   public <T extends Tensor> void set(Function<T, ? extends Tensor> function, List<Integer> index) {
-    int head = index.get(0);
+    int head = index.getFirst();
     if (index.size() == 1) // terminal case
       if (head == ALL)
         IntStream.range(0, length()).forEach(i -> list.set(i, function.apply((T) list.get(i)).copy()));
@@ -111,14 +112,14 @@ import ch.alpine.tensor.io.MathematicaFormat;
   @Override // from Tensor
   public Tensor add(Tensor tensor) {
     Integers.requireEquals(length(), tensor.length());
-    AtomicInteger i = new AtomicInteger();
+    Int i = new Int();
     return Tensor.of(tensor.stream().map(entry -> list.get(i.getAndIncrement()).add(entry)));
   }
 
   @Override // from Tensor
   public Tensor subtract(Tensor tensor) {
     Integers.requireEquals(length(), tensor.length());
-    AtomicInteger i = new AtomicInteger();
+    Int i = new Int();
     return Tensor.of(tensor.stream().map(entry -> list.get(i.getAndIncrement()).subtract(entry)));
   }
 
@@ -141,9 +142,9 @@ import ch.alpine.tensor.io.MathematicaFormat;
   public Tensor dot(Tensor tensor) {
     if (length() == 0 || byRef(0) instanceof Scalar) { // quick hint whether this is a vector
       Integers.requireEquals(length(), tensor.length());
-      AtomicInteger i = new AtomicInteger();
+      Int i = new Int();
       return tensor.stream().map(entry -> entry.multiply(Get(i.getAndIncrement()))) //
-          .reduce(Tensor::add).orElse(RealScalar.ZERO);
+          .reduce(Tensor::add).orElse(Hold.zero()); // compromise
     }
     return Tensor.of(stream().map(entry -> entry.dot(tensor)));
   }
@@ -153,8 +154,8 @@ import ch.alpine.tensor.io.MathematicaFormat;
     int size = Integers.requireEquals(ofs.size(), len.size());
     if (size == 0)
       return this;
-    int head = ofs.get(0);
-    int len0 = len.get(0);
+    int head = ofs.getFirst();
+    int len0 = len.getFirst();
     List<Tensor> subList = list.subList(head, head + len0);
     if (size == 1)
       return new TensorImpl(subList);
