@@ -5,13 +5,19 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.junit.jupiter.api.Assertions.fail;
+import static org.junit.jupiter.api.Assumptions.assumeFalse;
+
+import java.util.Random;
 
 import org.junit.jupiter.api.RepeatedTest;
 import org.junit.jupiter.api.RepetitionInfo;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.MethodSource;
 
 import ch.alpine.tensor.ComplexScalar;
 import ch.alpine.tensor.RealScalar;
+import ch.alpine.tensor.Scalar;
 import ch.alpine.tensor.Scalars;
 import ch.alpine.tensor.Tensor;
 import ch.alpine.tensor.Tensors;
@@ -20,9 +26,11 @@ import ch.alpine.tensor.alg.Array;
 import ch.alpine.tensor.alg.ConstantArray;
 import ch.alpine.tensor.alg.Last;
 import ch.alpine.tensor.alg.Sort;
+import ch.alpine.tensor.alg.Subdivide;
 import ch.alpine.tensor.alg.UnitVector;
 import ch.alpine.tensor.alg.VectorQ;
 import ch.alpine.tensor.api.ScalarUnaryOperator;
+import ch.alpine.tensor.chq.ExactTensorQ;
 import ch.alpine.tensor.mat.HilbertMatrix;
 import ch.alpine.tensor.mat.Tolerance;
 import ch.alpine.tensor.pdf.ComplexNormalDistribution;
@@ -32,9 +40,38 @@ import ch.alpine.tensor.pdf.c.NormalDistribution;
 import ch.alpine.tensor.pdf.c.UniformDistribution;
 import ch.alpine.tensor.qty.Quantity;
 import ch.alpine.tensor.sca.Chop;
+import ch.alpine.tensor.sca.Im;
 
 class RootsTest {
-  private static final int LIMIT = 20;
+  private final int LIMIT = 20;
+
+  @ParameterizedTest
+  @MethodSource(value = "test.TestDistributions#distributions2")
+  void testComplexTripleRoot(Distribution distribution) {
+    Random random = new Random(3);
+    for (int length = 1; length <= 3; ++length)
+      for (int index = 0; index < LIMIT; ++index) {
+        Tensor zeros = ConstantArray.of(ComplexScalar.of( //
+            RandomVariate.of(distribution, random), //
+            RandomVariate.of(distribution, random)), length);
+        Tensor coeffs = CoefficientList.of(zeros);
+        Tensor roots = Roots.of(coeffs);
+        Polynomial polynomial = Polynomial.of(coeffs);
+        Tensor map = roots.map(polynomial);
+        if (!Chop._05.allZero(map))
+          for (int count = 0; count < length; ++count) {
+            boolean anyZero = roots.map(zeros.Get(count).negate()::add).stream() //
+                .anyMatch(Chop._01::allZero);
+            if (!anyZero) {
+              IO.println("coeffs: " + coeffs);
+              IO.println(map);
+              System.err.println(zeros);
+              System.err.println(roots);
+              fail();
+            }
+          }
+      }
+  }
 
   @Test
   void testConstantUniform() {
@@ -68,17 +105,15 @@ class RootsTest {
     int length = repetitionInfo.getCurrentRepetition();
     for (int index = 0; index < LIMIT; ++index) {
       Tensor coeffs = RandomVariate.of(distribution, length);
-      if (Scalars.nonZero(Last.of(coeffs))) {
-        Tensor roots = Roots.of(coeffs);
-        VectorQ.requireLength(roots, length - 1);
-        Tensor check = roots.map(Polynomial.of(coeffs));
-        if (!Chop._03.allZero(check)) {
-          System.err.println("uni5 " + coeffs);
-          System.err.println(check);
-          fail();
-        }
-      } else
-        System.out.println("skip " + coeffs);
+      assumeFalse(Scalars.isZero(Last.of(coeffs)));
+      Tensor roots = Roots.of(coeffs);
+      VectorQ.requireLength(roots, length - 1);
+      Tensor check = roots.map(Polynomial.of(coeffs));
+      if (!Chop._03.allZero(check)) {
+        System.err.println("uni5 " + coeffs);
+        System.err.println(check);
+        fail();
+      }
     }
   }
 
@@ -88,17 +123,15 @@ class RootsTest {
     int length = repetitionInfo.getCurrentRepetition();
     for (int index = 0; index < LIMIT; ++index) {
       Tensor coeffs = RandomVariate.of(distribution, length);
-      if (Scalars.nonZero(Last.of(coeffs))) {
-        Tensor roots = Roots.of(coeffs);
-        VectorQ.requireLength(roots, length - 1);
-        Tensor check = roots.map(Polynomial.of(coeffs));
-        if (!Chop._03.allZero(check)) {
-          System.err.println("uniT " + coeffs);
-          System.err.println(check);
-          fail();
-        }
-      } else
-        System.out.println("skip " + coeffs);
+      assumeFalse(Scalars.isZero(Last.of(coeffs)));
+      Tensor roots = Roots.of(coeffs);
+      VectorQ.requireLength(roots, length - 1);
+      Tensor check = roots.map(Polynomial.of(coeffs));
+      if (!Chop._03.allZero(check)) {
+        System.err.println("uniT " + coeffs);
+        System.err.println(check);
+        fail();
+      }
     }
   }
 
@@ -137,7 +170,7 @@ class RootsTest {
     Distribution distribution = NormalDistribution.standard();
     int length = repetitionInfo.getCurrentRepetition();
     for (int index = 0; index < LIMIT; ++index) {
-      Tensor coeffs = Array.of(list -> Quantity.of(RandomVariate.of(distribution), "m^-" + list.get(0)), length);
+      Tensor coeffs = Array.of(list -> Quantity.of(RandomVariate.of(distribution), "m^-" + list.getFirst()), length);
       Tensor roots = Roots.of(coeffs);
       ScalarUnaryOperator scalarUnaryOperator = Polynomial.of(coeffs);
       Tensor tensor = roots.map(scalarUnaryOperator);
@@ -173,7 +206,7 @@ class RootsTest {
     int length = repetitionInfo.getCurrentRepetition();
     for (int index = 0; index < LIMIT; ++index) {
       Tensor coeffs = Array.of(list -> Quantity.of(ComplexScalar.of( //
-          RandomVariate.of(distribution), RandomVariate.of(distribution)), "m^-" + list.get(0)), length);
+          RandomVariate.of(distribution), RandomVariate.of(distribution)), "m^-" + list.getFirst()), length);
       Tensor roots = Roots.of(coeffs);
       ScalarUnaryOperator scalarUnaryOperator = Polynomial.of(coeffs);
       Tensor tensor = roots.map(scalarUnaryOperator);
@@ -202,9 +235,9 @@ class RootsTest {
     }
   }
 
-  @Test
-  void testRealTripleRoot() {
-    Distribution distribution = NormalDistribution.standard();
+  @ParameterizedTest
+  @MethodSource(value = "test.TestDistributions#distributions2")
+  void testRealTripleRoot(Distribution distribution) {
     for (int length = 1; length <= 3; ++length)
       for (int index = 0; index < LIMIT; ++index) {
         Tensor zeros = ConstantArray.of(RandomVariate.of(distribution), length);
@@ -238,25 +271,44 @@ class RootsTest {
     Tolerance.CHOP.requireClose(roots, ConstantArray.of(Scalars.fromString("1.2068399624219235[m]"), 3));
   }
 
+  /** safety critical code used for the gokart steering system
+   *
+   * @param b linear coefficient
+   * @param d cubic coefficient */
+  /* package */ record InverseSteerCubic(Scalar b, Scalar d) implements ScalarUnaryOperator {
+    @Override
+    public Scalar apply(Scalar y) {
+      return Roots.of(Tensors.of(y.negate(), b, RealScalar.ZERO, d)).Get(1);
+    }
+  }
+
   @Test
-  void testComplexTripleRoot() {
-    Distribution distribution = NormalDistribution.standard();
-    for (int length = 1; length <= 3; ++length)
-      for (int index = 0; index < LIMIT; ++index) {
-        Tensor zeros = ConstantArray.of(ComplexScalar.of( //
-            RandomVariate.of(distribution), //
-            RandomVariate.of(distribution)), length);
-        Tensor roots = Roots.of(CoefficientList.of(zeros));
-        for (int count = 0; count < length; ++count) {
-          boolean anyZero = roots.map(zeros.Get(count).negate()::add).stream() //
-              .anyMatch(Chop._01::allZero);
-          if (!anyZero) {
-            System.err.println(zeros);
-            System.err.println(roots);
-            fail();
-          }
-        }
-      }
+  void testSteer() {
+    Scalar c = RealScalar.of(+0.8284521034333863);
+    Scalar a = RealScalar.of(-0.33633373640449604);
+    Tensor coeffs = Tensors.of(RealScalar.ZERO, c, RealScalar.ZERO, a);
+    ScalarUnaryOperator cubic = Polynomial.of(coeffs);
+    for (Tensor t : Subdivide.of(-0.75, 0.75, 1230)) {
+      Scalar d = cubic.apply((Scalar) t);
+      Tensor roots = Roots.of(Tensors.of(d.negate(), c, RealScalar.ZERO, a));
+      assertEquals(ExactTensorQ.require(roots.map(Im.FUNCTION)), Array.zeros(3));
+      Chop._13.requireClose(roots.Get(1), t);
+    }
+  }
+
+  @Test
+  void testCubicOp() {
+    Scalar b = RealScalar.of(+0.8284521034333863);
+    Scalar d = RealScalar.of(-0.33633373640449604);
+    InverseSteerCubic inverseSteerCubic = new InverseSteerCubic(b, d);
+    Tensor coeffs = Tensors.of(RealScalar.ZERO, b, RealScalar.ZERO, d);
+    ScalarUnaryOperator cubic = Polynomial.of(coeffs);
+    for (Tensor t : Subdivide.of(-0.75, 0.75, 1230)) {
+      Scalar apply = cubic.apply((Scalar) t);
+      Scalar root = inverseSteerCubic.apply(apply);
+      Chop._13.requireClose(root, t);
+    }
+    assertEquals(inverseSteerCubic.apply(RealScalar.ZERO), RealScalar.ZERO);
   }
 
   @Test
